[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.6", features = ["http2"] }
async-scoped = { version = "0.7", features = ["use-tokio"] }
async-trait = "0.1.56"
tokio = { version = "1.34.0", features = ["full"]}
tower-http = { version = "0.4.4", features = ["full"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
http = "0.2.6"
http-body = "0.4"
hyper = "0.14.18"
futures = "0.3.29"
bytes = "1.5.0"
tower = { version = "0.4.13", features = ["full"] }
